# bbcli

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: 1_CI.yaml
docs/: README.md  authentication.md  oauth2-authentication.md  pre-commit-setup.md  repository-management.md
src/bbcli/: __init__.py  main.py
src/bbcli/cli/: __init__.py  auth.py  branch.py  oauth_auth.py  project.py  repo.py
src/bbcli/core/: __init__.py  api_client.py  auth_manager.py  config.py  exceptions.py  oauth_manager.py  oauth_storage.py
src/bbcli/utils/: __init__.py  helpers.py  output.py  validation.py
tests/: __init__.py  test_api_client.py  test_auth.py  test_auth_manager_encryption.py  test_config_integration.py  test_config_singleton.py  test_oauth_auth_cli.py  test_oauth_manager.py  test_oauth_storage.py  test_repo_list_cli.py  test_validation.py
